--- a/guochanghang-js/1.html
+++ b/guochanghang-js/1.html
@@ -10,6 +10,7 @@
 
 <body>
     <input type="text" name="" id="f55">
+    啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊
     <script>
         const shopInfo = {
             1: {
