--- a/guochanghang-js/1.html
+++ b/guochanghang-js/1.html
@@ -12,6 +12,7 @@
     <input type="text" name="" id="f55">
     啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊
     55555555555555555555555555555555555
+    她她她她她她她她她她她她她
     <script>
         const shopInfo = {
             1: {
